--- a/css/estilosCotizacion.css
+++ b/css/estilosCotizacion.css
@@ -14,7 +14,7 @@
     padding: 1em;
 }
 #contenedor{
-    width: 500px;
+    width: min(500px, 100%);
     height: 700px;
     margin: 0 auto;
     display: flex;
@@ -25,8 +25,9 @@
     box-shadow: 17px 20px 5px -4px rgba(0,0,0,0.75);
     margin-top: 2em;
     margin-bottom: 2em;
+    padding: 1.5em;
 }
-#Planes{
+#PlanesM{
     width: 22.5em;
     height: 2.5em;
     font-size: 18px;
@@ -41,6 +42,7 @@
     padding: 1.5em;
     color: white;
 }
+
 .contenido{
     margin: 0.5em;
 }
@@ -48,15 +50,28 @@
     font-size: 25px;
 }
 .contenido > input{
-    width: 30em;
+    width: 100%;
     height: 2.5em;
     font-size: 15px;
 }
-.boton{
-    font-size: 30px;
-    margin-left: 1em;
-    margin-right: 1em;
+#PlanesM{
+    width: 100%;
+}
+.contenidoBtn{
+    display: flex;
+    flex-direction: column;
 }
 label{
     font-size: 20px;
+}
+button{
+    font-size: 30px;
+    margin-top: 1em;
+}
+@media (min-width: 768px){
+    .contenidoBtn{
+        flex-direction: row;
+        margin-left: 1em;
+        margin-right: 1em;
+    }
 }
